--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -13,3 +13,4 @@ endfunction()
 add_chapter(00_base_code)
 add_chapter(01_instance_creation)
 add_chapter(02_validation_layers)
+add_chapter(05_window_surface)
