swap chain creation

--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -13,4 +13,7 @@ endfunction()
 add_chapter(00_base_code)
 add_chapter(01_instance_creation)
 add_chapter(02_validation_layers)
+add_chapter(03_physical_device_selection)
+add_chapter(04_logical_device)
 add_chapter(05_window_surface)
+add_chapter(06_swap_chain_creation)
