--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -17,3 +17,4 @@ add_chapter(03_physical_device_selection)
 add_chapter(04_logical_device)
 add_chapter(05_window_surface)
 add_chapter(06_swap_chain_creation)
+add_chapter(07_image_views)
