--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -18,3 +18,5 @@ add_chapter(04_logical_device)
 add_chapter(05_window_surface)
 add_chapter(06_swap_chain_creation)
 add_chapter(07_image_views)
+add_chapter(08_graphics_pipeline)
+add_chapter(09_shader_modules)
