graphics pipeline: render pass

--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -84,3 +84,4 @@ add_chapter(07_image_views)
 add_chapter(08_graphics_pipeline)
 add_chapter(09_shader_modules SHADER 09_shader_base)
 add_chapter(10_fixed_functions SHADER 10_shader_base)
+add_chapter(11_render_passes SHADER 11_shader_base)
