--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -87,3 +87,4 @@ add_chapter(10_fixed_functions SHADER 10_shader_base)
 add_chapter(11_render_passes SHADER 11_shader_base)
 add_chapter(12_graphics_pipeline_complete SHADER 12_shader_base)
 add_chapter(13_framebuffers SHADER 13_shader_base)
+add_chapter(14_command_buffers SHADER 14_shader_base)
