--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -88,3 +88,4 @@ add_chapter(11_render_passes SHADER 11_shader_base)
 add_chapter(12_graphics_pipeline_complete SHADER 12_shader_base)
 add_chapter(13_framebuffers SHADER 13_shader_base)
 add_chapter(14_command_buffers SHADER 14_shader_base)
+add_chapter(15_hello_triangle SHADER 15_shader_base)
