--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -1,3 +1,5 @@
+project(vulkan_tutorial)
+
 # 添加glslangValidator
 add_executable(glslang::validator IMPORTED)
 find_program(GLSLANG_VALIDATOR "glslangValidator" HINTS $ENV{VULKAN_SDK}/bin REQUIRED)
