--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,13 @@
 cmake_minimum_required(VERSION 3.20)
 
-project(learn-vulkan)
+project(learn_vulkan)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if(WIN32)
+if (WIN32)
     add_compile_options(/wd4819)
-endif()
-
-find_package (Vulkan REQUIRED)
+endif ()
 
 add_subdirectory(3rdparty)
 
