--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -93,3 +93,4 @@ add_chapter(12_graphics_pipeline_complete SHADER 12_shader_base)
 add_chapter(13_framebuffers SHADER 13_shader_base)
 add_chapter(14_command_buffers SHADER 14_shader_base)
 add_chapter(15_hello_triangle SHADER 15_shader_base)
+add_chapter(16_frames_in_flight SHADER 16_shader_base)
