--- a/vulkan_tutorial/CMakeLists.txt
+++ b/vulkan_tutorial/CMakeLists.txt
@@ -93,4 +93,4 @@ add_chapter(14_command_buffers SHADER 14_shader_base)
 add_chapter(15_hello_triangle SHADER 15_shader_base)
 add_chapter(16_frames_in_flight SHADER 16_shader_base)
 add_chapter(17_swap_chain_recreation SHADER 17_shader_base)
-add_chapter(18_shader_input)
+add_chapter(18_shader_input SHADER 18_shader_vertex_buffer)
