--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-file(GLOB SOURCES project/*.cpp)
-file(GLOB HEADERS project/*.h)
+file(GLOB SOURCES comet/*.cpp)
+file(GLOB HEADERS comet/*.h)
 
-add_library(project STATIC ${SOURCES} ${HEADERS})
+add_library(comet STATIC ${SOURCES} ${HEADERS})
 
-target_include_directories(project PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(comet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(project PUBLIC glfw glm imgui spdlog stb)
+target_link_libraries(comet PUBLIC Vulkan::Vulkan glfw glm imgui spdlog stb)
