--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -70,8 +70,6 @@ function(add_chapter CHAPTER_NAME)
 
 endfunction()
 
-add_chapter(04_logical_device)
-# add_chapter(05_window_surface)
 # add_chapter(06_swap_chain_creation)
 # add_chapter(07_image_views)
 # add_chapter(08_graphics_pipeline)
@@ -86,4 +84,4 @@ add_chapter(04_logical_device)
 # add_chapter(17_swap_chain_recreation SHADER 17_shader_base)
 # add_chapter(18_shader_input SHADER 18_shader_vertex_buffer)
 
-# add_chapter(99_final)
+add_chapter(99_final)
