Load vulkan using volk

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -19,6 +19,17 @@ if (NOT TARGET glm)
     # set_target_properties(uninstall PROPERTIES FOLDER ${EXTERNAL_DIR}/glm)
 endif ()
 
+if (NOT TARGET glslang)
+    option(ENABLE_SPVREMAPPER OFF)
+    option(ENABLE_GLSLANG_BINARIES OFF)
+    set(ENABLE_HLSL ON)
+    option(ENABLE_OPT OFF)
+    option(BUILD_TESTING OFF)
+    option(BUILD_EXTERNAL OFF)
+    add_subdirectory(glslang)
+    set_target_properties(glslang PROPERTIES FOLDER ${EXTERNAL_DIR}/glslang)
+endif ()
+
 if (NOT TARGET imgui)
     include(imgui)
     set_target_properties(imgui PROPERTIES FOLDER ${EXTERNAL_DIR}/imgui)
@@ -33,3 +44,14 @@ if (NOT TARGET stb)
     include(stb)
     set_target_properties(stb PROPERTIES FOLDER ${EXTERNAL_DIR}/stb)
 endif ()
+
+if (NOT TARGET volk)
+    set(VULKAN_HEADERS_INSTALL_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Vulkan-Headers)
+    add_subdirectory(volk)
+    set_target_properties(volk PROPERTIES FOLDER ${EXTERNAL_DIR}/volk)
+endif ()
+
+if (NOT TARGET Vulkan-Headers)
+    add_subdirectory(Vulkan-Headers)
+    set_target_properties(Vulkan-Headers PROPERTIES FOLDER ${EXTERNAL_DIR}/Vulkan-Headers)
+endif()
