--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,4 +5,4 @@ add_library(comet STATIC ${SOURCES} ${HEADERS})
 
 target_include_directories(comet PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-target_link_libraries(comet PUBLIC Vulkan::Vulkan glfw glm imgui spdlog stb)
+target_link_libraries(comet PUBLIC volk glfw glm imgui spdlog stb)
