--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,12 @@
 [submodule "external/stb"]
 	path = external/stb
 	url = git@github.com:nothings/stb.git
+[submodule "external/glslang"]
+	path = external/glslang
+	url = git@github.com:KhronosGroup/glslang.git
+[submodule "external/volk"]
+	path = external/volk
+	url = git@github.com:zeux/volk.git
+[submodule "external/Vulkan-Headers"]
+	path = external/Vulkan-Headers
+	url = git@github.com:KhronosGroup/Vulkan-Headers.git
