--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -21,8 +21,7 @@ endif ()
 
 if (NOT TARGET glslang)
     option(ENABLE_SPVREMAPPER OFF)
-    option(ENABLE_GLSLANG_BINARIES OFF)
-    set(ENABLE_HLSL ON)
+    option(ENABLE_HLSL OFF)
     option(ENABLE_OPT OFF)
     option(BUILD_TESTING OFF)
     option(BUILD_EXTERNAL OFF)
