--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -54,3 +54,9 @@ if (NOT TARGET Vulkan-Headers)
     add_subdirectory(Vulkan-Headers)
     set_target_properties(Vulkan-Headers PROPERTIES FOLDER ${EXTERNAL_DIR}/Vulkan-Headers)
 endif()
+
+if (NOT TARGET VulkanMemoryAllocator)
+    add_subdirectory(VulkanMemoryAllocator)
+    set_target_properties(VulkanMemoryAllocator PROPERTIES FOLDER ${EXTERNAL_DIR}/VulkanMemoryAllocator)
+    target_link_libraries(VulkanMemoryAllocator INTERFACE Vulkan-Headers)
+endif()
