--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       PARALLEL: -j 2
     runs-on: "${{ matrix.platform }}-latest"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           submodules: "recursive"
       - if: ${{ matrix.platform == 'ubuntu' }}
@@ -36,21 +36,21 @@ jobs:
         name: sccache
         uses: hendrikmuhs/ccache-action@v1.2.9
         with:
-          key: ${{ github.job }}-${{ matrix.platform }}
+          key: ${{ github.job }}-${{ matrix.os }}
           variant: sccache
       - if: ${{ matrix.platform != 'windows' }}
         name: ccache
         uses: hendrikmuhs/ccache-action@v1.2.9
         with:
-          key: ${{ github.job }}-${{ matrix.platform }}
+          key: ${{ github.job }}-${{ matrix.os }}
       - if: ${{ matrix.platform == 'windows' }}
         name: Configure and build
         shell: pwsh
         run: |
-          cmake -B"build/${{ matrix.platform }}" -G"NMake Makefiles" -DCMAKE_C_COMPILER_LAUNCHER=C:\\Users\\runneradmin\\.cargo\\bin\\sccache -DCMAKE_CXX_COMPILER_LAUNCHER=C:\\Users\\runneradmin\\.cargo\\bin\\sccache
-          cmake --build "build/${{ matrix.platform }}" --target comet --config ${{ matrix.build_type }}  -j 1
+          cmake -B"build/${{ matrix.platform }}" -G"Ninja" -DCMAKE_C_COMPILER_LAUNCHER=C:\\Users\\runneradmin\\.cargo\\bin\\sccache -DCMAKE_CXX_COMPILER_LAUNCHER=C:\\Users\\runneradmin\\.cargo\\bin\\sccache
+          cmake --build "build/${{ matrix.platform }}" --target prism --config ${{ matrix.build_type }}  -j 1
       - if: ${{ matrix.platform != 'windows' }}
         name: Configure and build
         run: |
           cmake -B"build/${{ matrix.platform }}"
-          cmake --build "build/${{ matrix.platform }}" --target comet --config ${{ matrix.build_type }} ${{ env.PARALLEL }}
+          cmake --build "build/${{ matrix.platform }}" --target prism --config ${{ matrix.build_type }} ${{ env.PARALLEL }}
