--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -36,6 +36,7 @@ if (NOT TARGET imgui)
 endif ()
 
 if (NOT TARGET spdlog)
+    option(SPDLOG_USE_STD_FORMAT "" ON)
     add_subdirectory(spdlog)
     set_target_properties(spdlog PROPERTIES FOLDER ${EXTERNAL_DIR}/spdlog)
 endif ()
