chore: update third party

--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -15,17 +15,16 @@ if (NOT TARGET glm)
     option(BUILD_TESTING "" OFF)
     option(GLM_TEST_ENABLE "" OFF)
     add_subdirectory(glm)
-    # set_target_properties(glm_static PROPERTIES FOLDER ${EXTERNAL_DIR}/glm)
-    # set_target_properties(uninstall PROPERTIES FOLDER ${EXTERNAL_DIR}/glm)
+    set_target_properties(glm PROPERTIES FOLDER ${EXTERNAL_DIR}/glm)
 endif ()
 
 if (NOT TARGET glslang)
-    option(ENABLE_SPVREMAPPER OFF)
-    option(ENABLE_GLSLANG_BINARIES ON)
-    option(ENABLE_HLSL OFF)
-    option(ENABLE_OPT OFF)
-    option(BUILD_TESTING OFF)
-    option(BUILD_EXTERNAL OFF)
+    option(ENABLE_SPVREMAPPER "" OFF)
+    option(ENABLE_GLSLANG_BINARIES "" ON)
+    option(ENABLE_HLSL "" OFF)
+    option(ENABLE_OPT "" OFF)
+    option(BUILD_TESTING "" OFF)
+    option(BUILD_EXTERNAL "" OFF)
     add_subdirectory(glslang)
     set_target_properties(glslang PROPERTIES FOLDER ${EXTERNAL_DIR}/glslang)
 endif ()
