--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,5 +1,10 @@
 set(EXTERNAL_DIR "external")
 
+if (NOT fmt)
+    add_subdirectory(fmt)
+    set_target_properties(fmt PROPERTIES FOLDER ${EXTERNAL_DIR}/fmt)
+endif ()
+
 if (NOT TARGET glfw)
     option(GLFW_BUILD_EXAMPLES "" OFF)
     option(GLFW_BUILD_TESTS "" OFF)
@@ -35,7 +40,7 @@ if (NOT TARGET imgui)
 endif ()
 
 if (NOT TARGET spdlog)
-    option(SPDLOG_USE_STD_FORMAT "" ON)
+    option(SPDLOG_FMT_EXTERNAL "" ON)
     add_subdirectory(spdlog)
     set_target_properties(spdlog PROPERTIES FOLDER ${EXTERNAL_DIR}/spdlog)
 endif ()
