--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -12,10 +12,10 @@ macro(add_sample)
     set_target_properties(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
     set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
 
-    file(GLOB GLSL_SHADERS ${CMAKE_CURRENT_SOURCE_DIR}/shaders/*.comp)
+    file(GLOB_RECURSE GLSL_SHADERS *.glsl)
     unset(SPV_SHADERS)
     foreach(GLSL_SHADER ${GLSL_SHADERS})
-        get_filename_component(SHADER_NAME ${GLSL_SHADER} NAME_WE)
+        get_filename_component(SHADER_NAME ${GLSL_SHADER} NAME_WLE)
         set(SPV_SHADER ${CMAKE_CURRENT_BINARY_DIR}/shaders/${SHADER_NAME}.spv)
         compile_glsl(${GLSL_SHADER} ${SPV_SHADER} SPV_SHADERS)
     endforeach()
@@ -30,3 +30,4 @@ include(glsl)
 add_subdirectory(00_hello_world)
 add_subdirectory(01_offscreen)
 add_subdirectory(02_compute_pipeline)
+add_subdirectory(03_graphics_pipeline)
