--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(00_hello_world)
 add_subdirectory(01_offscreen)
 add_subdirectory(02_compute_pipeline)
 add_subdirectory(03_graphics_pipeline)
+add_subdirectory(04_render_frame)
