--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -33,3 +33,4 @@ add_subdirectory(02_compute_pipeline)
 add_subdirectory(03_graphics_pipeline)
 add_subdirectory(04_render_frame)
 add_subdirectory(05_render_context)
+add_subdirectory(06_shader_input)
