dev: depth buffer

--- a/sandbox/CMakeLists.txt
+++ b/sandbox/CMakeLists.txt
@@ -66,3 +66,4 @@ add_subdirectory(04_render_frame)
 add_subdirectory(05_render_context)
 add_subdirectory(06_shader_input)
 add_subdirectory(07_texture)
+add_subdirectory(08_depth)
